--- a/src/pages/SignUpPage/SignUpPage.module.scss
+++ b/src/pages/SignUpPage/SignUpPage.module.scss
@@ -1,28 +1,16 @@
 .signUpPage {
   padding: 40px 0 0 0;
 }
-.signInFrom {
-  margin: 0 auto;
-  padding: 48px 32px;
-  width: 380px;
+.form {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  border-radius: 6px;
-  border: 1px solid var(--Grey-grey-5, #d9d9d9);
-  background: var(--Grey-grey-1, #fff);
-  box-shadow: 0px 0.609px 2.933px 0px rgba(0, 0, 0, 0.02), 0px 1.463px 7.049px 0px rgba(0, 0, 0, 0.03),
-    0px 2.755px 13.273px 0px rgba(0, 0, 0, 0.04), 0px 4.914px 23.676px 0px rgba(0, 0, 0, 0.04),
-    0px 9.191px 44.284px 0px rgba(0, 0, 0, 0.05), 0px 22px 106px 0px rgba(0, 0, 0, 0.07);
-  a {
-    color: #1890ff;
+  row-gap: 10px;
+  hr {
+    margin: 10px 0 8px 0;
+    height: 1px;
+    background: #e8e8e8;
   }
 }
-.title {
-  margin: 0 0 20px 0;
-  font-family: Roboto;
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 28px;
+.checkbox {
+  margin: 0 0 10px 0;
 }
